clang/test/BSC/Negative/Method/BuiltInType/int_this_param_check/int_this_param_check.cbs
// RUN: %clang_cc1 -verify %s

void int::increase(float this) { // expected-error {{type of parameter 'this' is wrong, expected 'This*' or 'This' or 'int*' or 'int', but found 'float'}}
}
